Update homestay admin permissions and UI