@@ -2,16 +2,34 @@ package com.homestay.security;
 
 import com.homestay.enums.RoleType;
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-public record JwtUserPrincipal(Long userId, String username, RoleType role) implements UserDetails {
+public class JwtUserPrincipal implements UserDetails {
+
+    private final Long userId;
+    private final String username;
+    private final RoleType role;
+
+    public JwtUserPrincipal(Long userId, String username, RoleType role) {
+        this.userId = userId;
+        this.username = username;
+        this.role = role;
+    }
+
+    public Long userId() {
+        return userId;
+    }
+
+    public RoleType role() {
+        return role;
+    }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority("ROLE_" + role.name()));
+        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + role.name()));
     }
 
     @Override
@@ -22,5 +40,53 @@ public record JwtUserPrincipal(Long userId, String username, RoleType role) impl
     @Override
     public String getUsername() {
         return username;
+    }
+
+    @Override
+    public boolean isAccountNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isAccountNonLocked() {
+        return true;
+    }
+
+    @Override
+    public boolean isCredentialsNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isEnabled() {
+        return true;
+    }
+
+    @Override
+    public int hashCode() {
+        final int prime = 31;
+        int result = 1;
+        result = prime * result + ((userId == null) ? 0 : userId.hashCode());
+        result = prime * result + ((username == null) ? 0 : username.hashCode());
+        return prime * result + ((role == null) ? 0 : role.hashCode());
+    }
+
+    @Override
+    public boolean equals(Object obj) {
+        if (this == obj) return true;
+        if (obj == null || getClass() != obj.getClass()) return false;
+        JwtUserPrincipal other = (JwtUserPrincipal) obj;
+        if (userId == null) {
+            if (other.userId != null) return false;
+        } else if (!userId.equals(other.userId)) return false;
+        if (username == null) {
+            if (other.username != null) return false;
+        } else if (!username.equals(other.username)) return false;
+        return role == other.role;
+    }
+
+    @Override
+    public String toString() {
+        return "JwtUserPrincipal[userId=" + userId + ", username=" + username + ", role=" + role + "]";
     }
 }
